# agent-todo-list

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  TODO.md  install.sh  lefthook.toml  package.json  tsconfig.json
.archive/cli-ts/commands/: branch.ts  browser.ts  delete.ts  list.ts
.archive/lib-ts/: automerge-base64.d.ts  git-identity.ts  history.ts  inbox.ts  merge-driver.ts  migrate.ts  queries.ts  schema.ts  storage.ts
.archive/lib-ts/__tests__/: export.test.ts  history.test.ts  project.test.ts  queries.test.ts  storage.test.ts
.archive/server-ts/__tests__/: server.test.ts
.github/workflows/: ci.yml  release.yml
.todo/: TODO-PROCESSED.md  TODO.md  config.toml  data.automerge
.todo/plans/: AGT-18.md  AGT-26.md  AGT-56.md  AGT-60.md  AGT-66.md  AGT-80.md
agt-rs/: Cargo.toml
agt-rs/crates/agt-cli/: Cargo.toml
agt-rs/crates/agt-cli/src/: main.rs  output.rs
agt-rs/crates/agt-cli/src/commands/: branch.rs  config.rs  init.rs  list.rs  log.rs  member.rs  merge_driver.rs  mod.rs  poll.rs  runs.rs  serve.rs  show.rs
agt-rs/crates/agt-lib/src/: export.rs  history.rs  inbox.rs  lib.rs  migrate.rs  operations.rs  project.rs  queries.rs  schema.rs  storage.rs
agt-rs/crates/agt-server/src/: routes.rs  state.rs
archive/cli-ts/commands/: member.ts  update.ts
completions/: _agt  agt.bash  agt.fish
src/cli/: index.ts  output.ts
src/cli/__tests__/: cli.test.ts
src/cli/commands/: add.ts  assign.ts  brain.ts  branch.ts  browser.ts  comment.ts  commit.ts  config.ts  export.ts  inbox.ts  init.ts  list.ts  log.ts  member.ts  serve.ts  show.ts  (+2 more)
src/lib/: automerge-base64.d.ts  brain.ts  export.ts  inbox.ts  merge-driver.ts  migrate.ts  operations.ts  project.ts  queries.ts  schema.ts  storage.ts
src/rust/crates/agt-cli/: Cargo.toml
src/rust/crates/agt-cli/src/: main.rs  output.rs
src/rust/crates/agt-cli/src/commands/: add.rs  assign.rs  branch.rs  comment.rs  commit.rs  config.rs  cycle.rs  inbox.rs  init.rs  link_commit.rs  list.rs  member.rs  mod.rs  plan.rs  poll.rs  queue.rs  run.rs  show.rs  stats.rs  update.rs  workflow.rs
src/rust/crates/agt-lib/: Cargo.toml
src/rust/crates/agt-lib/src/: export.rs  git.rs  git_identity.rs  history.rs  inbox.rs  lib.rs  merge_driver.rs  migrate.rs  operations.rs  project.rs  queries.rs  schema.rs  stats.rs  storage.rs
src/rust/crates/agt-server/: Cargo.toml
src/rust/crates/agt-server/src/: lib.rs  routes.rs  state.rs
src/server/: dev.ts  index.ts
src/web/: README.md  index.html  package.json
(+45 files in other folders)
