[workspace]
members = ["crates/agt-lib", "crates/agt-cli", "crates/agt-server"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"

[workspace.dependencies]
agt-lib = { path = "crates/agt-lib" }
automerge = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[profile.release]
lto = "thin"
strip = true
codegen-units = 4
opt-level = "s"
