[package]
name = "agt-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agt"
path = "src/main.rs"

[dependencies]
agt-lib.workspace = true
automerge.workspace = true
clap = { version = "4", features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
colored = "3"

chrono.workspace = true
uuid.workspace = true
regex = "1"
serde.workspace = true
serde_yaml = "0.9"
minijinja = "2"
libc = "0.2"
agt-server = { path = "../agt-server" }
termimad = "0.31"
terminal_size = "0.4"
tokio = { version = "1", features = ["full"] }
