[package]
name = "agt-lib"
version.workspace = true
edition.workspace = true

[dependencies]
automerge.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
regex = "1"

[dev-dependencies]
